- An ``AttributeError`` raised when the ``--bbox`` option of fio-cat is used
  with more than one input file has been fixed (#543, #544).
- Obsolete and derelict fiona.tool module has been removed.
- Revert the change in 0a2bc7c that discards Z in geometry types when a
  collection's schema is reported (#541).
- Require six version 1.7 or higher (#550).

1.8a1 (2017-11-06)
------------------

New features:

- Each call of ``writerecords()`` involves one or more transactions of up to
  20,000 features each. This improves performance when writing GeoPackage files
  as the previous transaction size was only 200 features (#476, #491).

Packaging:

- Fiona's Cython source files have been refactored so that there are no longer
  separate extension modules for GDAL 1.x and GDAL 2.x. Instead there is a base
  extension module based on GDAL 2.x and shim modules for installations that
  use GDAL 1.x.

1.7.11.post1 (2018-01-08)
-------------------------

- This post-release adds missing expat (and thereby GPX format) support to
  the included GDAL library (still version 2.2.2).

1.7.11 (2017-12-14)
-------------------

- The ``encoding`` keyword argument for ``fiona.open()``, which is intended
  to allow a caller to override a data source's own and possibly erroneous
  encoding, has not been working (#510, #512). The problem is that we weren't
  always setting GDAL open or config options before opening the data sources.
  This bug is resolved by a number of commits in the maint-1.7 branch and
  the fix is demonstrated in tests/test_encoding.py.
- An ``--encoding`` option has been added to fio-load to enable creation of
  encoded shapefiles with an accompanying .cpg file (#499, #517).

1.7.10.post1 (2017-10-30)
-------------------------

- A post-release has been made to fix a problem with macosx wheels uploaded
  to PyPI.

1.7.10 (2017-10-26)
-------------------

Bug fixes:

- An extraneous printed line from the ``rio cat --layers`` validator has been
  removed (#478).
