@@ -31,6 +31,8 @@ Bug fixes:
 - Revert the change in 0a2bc7c that discards Z in geometry types when a
   collection's schema is reported (#541).
 - Require six version 1.7 or higher (#550).
+- A regression related to "zip+s3" URIs has been fixed.
+- Debian's GDAL data locations are now searched by default (#583).
 
 1.8a1 (2017-11-06)
 ------------------
